--- a/PreprocessingVizualisation.ipynb
+++ b/PreprocessingVizualisation.ipynb
@@ -316,11 +316,14 @@
     "import cell2location as c2l\n",
     "import squidpy as sq\n",
     "\n",
+    "sc.settings.verbosity = 3\n",
+    "sc.settings.set_figure_params(dpi=80, facecolor=\"white\")\n",
+    "\n",
     "#lire les données \n",
-    "adata_sc = sc.read(\"scrna.h5ad\")\n",
+    "adata_sc = sc.read(\"scrna.h5ad\") # mettre le nom du fichier scRNAseq\n",
     "adata_sc.X = adata_sc.layers[\"counts\"]\n",
     "\n",
-    "adata_st = sc.read(\"visium.h5ad\")\n",
+    "adata_st = sc.read(\"visium.h5ad\") # mettre le nom du fichier spatial\n",
     "\n",
     "print(adata_sc, adata_st)"
    ]
@@ -366,6 +369,39 @@
     "adata_st.var.set_index(\"gene_ids\", drop=True, inplace=True)\n",
     "\n",
     "adata_st.var.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f49c10b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#gènes mitochondriaux\n",
+    "\n",
+    "# find mitochondrial (MT) genes\n",
+    "adata_st.var[\"MT_gene\"] = [\n",
+    "    gene.startswith(\"MT-\") for gene in adata_st.var[\"feature_name\"]\n",
+    "]\n",
+    "\n",
+    "# remove MT genes for spatial mapping (keeping their counts in the object)\n",
+    "adata_st.obsm[\"MT\"] = adata_st[:, adata_st.var[\"MT_gene\"].values].X.toarray()\n",
+    "adata_st = adata_st[:, ~adata_st.var[\"MT_gene\"].values]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16871360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shared_features = [\n",
+    "    feature for feature in adata_st.var_names if feature in adata_sc.var_names\n",
+    "]\n",
+    "adata_sc = adata_sc[:, shared_features].copy()\n",
+    "adata_st = adata_st[:, shared_features].copy()"
    ]
   }
  ],
